examples/errors/unknown_type.aaa
fn
    foo
args
    bar as baz
begin
    nop
end
